--- a/about.html
+++ b/about.html
@@ -72,9 +72,9 @@
         <hr class="border-t-[1vh] border-gray-500 w-[7%] mt-[2vh] mx-[2vw]">
         <hr class="border-t-[1vh] border-gray-500 w-[20%] mt-[2vh] mx-[2vw]">
         <div class="w-[50vw] h-[50vh] mx-auto my-auto">
-          <p class="text-xl text-gray-200">Beyond simply programming, I actively participate in local hackathons and hacking in online Cyber Security CTF competitions. Occasionally, you'll find me feasting in all you can eat hotpot and kpot restaurants or working away at a boba shop.</p>
+          <p class="text-xl text-gray-200">Beyond simply programming, I actively participate in local <a href="https://devpost.com/victorliu5000" target="_blank" class="text-blue-400">hackathons</a> and hacking in online Cyber Security <a href="https://ctftime.org/team/287674" target="_blank" class="text-blue-400">Capture the Flag</a> competitions. Occasionally, you'll find me feasting in all you can eat hotpot and kpot restaurants or working away at a boba shop.</p>
           <div class="grid grid-cols-2 gap-[3vh] w-full h-[60%] mt-[5vh]">
-            <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
+            <div class="bg-[#333333] shadow-lg hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
               <div class="flex justify-center space-x-2">
                 <img src="assets/tennisIcon.png" alt="" class="w-[10%] opacity-50 group-hover:opacity-100 duration-300">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Tennis</h3>
@@ -82,7 +82,7 @@
               <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
               <p class="text-md text-gray-400 text-center group-hover:text-white duration-300">I've been playing tennis for the past 7 years and it's still a hobby I enjoy a lot to this day</p>
             </div>
-            <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
+            <div class="bg-[#333333] shadow-lg hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
               <div class="flex justify-center space-x-2">
                 <img src="assets/codingIcon.png" alt="" class="w-[10%] opacity-50 group-hover:opacity-100 duration-300">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Coding</h3>
@@ -90,7 +90,7 @@
               <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
               <p class="text-md text-gray-400 text-center group-hover:text-white duration-300">Discovering my passion for coding at a young age, it's something I enjoy doing every day</p>
             </div>
-            <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
+            <div class="bg-[#333333] shadow-lg hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
               <div class="flex justify-center space-x-2">
                 <img src="assets/violinIcon.png" alt="" class="w-[10%] opacity-50 group-hover:opacity-100 duration-300">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Violin</h3>
@@ -98,7 +98,7 @@
               <hr class="border-t-2 border-gray-500 w-[70%] my-[1vh] group-hover:border-white duration-300">
               <p class="text-md text-gray-400 text-center group-hover:text-white duration-300">From kindergarten to junior year, I've been continuously playing the violin</p>
             </div>
-            <div class="bg-[#333333] hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] border-t border-l border-white hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
+            <div class="bg-[#333333] shadow-lg hover:shadow-md hover:shadow-white duration-300 rounded-lg w-full h-[17vh] hover:scale-[1.02] hover:cursor-pointer flex flex-col items-center p-[2vh] group">
               <div class="flex justify-center space-x-2">
                 <img src="assets/swimmingIcon.png" alt="" class="w-[10%] opacity-50 group-hover:opacity-100 duration-300">
                 <h3 class="text-xl font-bold text-gray-400 group-hover:text-white">Swimming</h3>
