--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </div>
         </div>
         <div class="flex-grow flex flex-col items-center justify-center">
-          <h3 class="text-2xl text-white font-bold">Hi, my name is Victor Liu</h3>
+          <h3 class="text-4xl text-gray-300">Hi, my name is <span class="font-bold text-white">Victor Liu</span></h3>
           <h1 class="text-8xl text-white font-bold text-center mb-[5vh]">Welcome to my Website!</h1>
           <p class="text-lg text-gray-300 w-[50vw] text-center mb-[5vh]">I'm a rising senior at Centennial High School and an aspiring Computer Science major. Here is my portfolio where you can learn more about me, discover some of my passions, and check out some of the projects I've created. Have fun!</p>
         </div>
